Revision history for App-Doh

          - Moved asset directory under docs path
          - Fixed cache invalidation
          - Added make_css method to ::CLI
          - Added file upload to asset directory
          - Updated highlight.js and colour scheme
          - Fixed output from Pod::Xhtml. Indexes work
          - Navigation uses new iterator. No more hidden state
          - Rewriting docs tree walker
          - Refactored docs tree to cache and recalculate on update
          - Added XML view
          - Added Test::Warnings as a dependenct to fix P:M:LogErrors
          - Started to add create screen
          - Switched from jQuery to Mootools. Autosize textarea works
          - Made README.md a copy of Getting Started
          - Updated dependencies
          - Added app editor image to Getting_Started
          - Markdown editor autosizes textarea
          - Only code block to go on static pages
          - Updated git hooks
          - Static generator creating pages
          - Adding static generator
          - Going multilingual
          - Added markdown editor
          - Added green.css to repository
          - Added MANIFEST to repository
          - Added more installation instuctions
          - Renamed Build.PL template
          - Removed width: 100% from CSS
          - Split out navbar.tt
          - Removed Ident and extra VERSION lines
          - Going to re use less on the CSS
          - Help model doesn't hard code the url
          - Switched to Dist::Zilla
          - Fixed Pod css for index
          - Going to rewrite float view
          - Own CSS starting to work
          - Started remove Bootstrap and lessc
          - Help model complete
          - Microformats register their extensions
          - Supports POD as second microformat
          - Daemon can start multiple instances
          - Added Daemon
          - Favicon, cfg files and Plack sorted
          - Rename to Doh complete