@@ -3,5 +3,5 @@
       method="post" name="create-file">
    <input  class="pathname" name="pathname" type="textfield">
    <button class="btn btn-submit" name="_method" type="submit"
-           value="create">[% loc( 'Create' ) %]</button>
+           value="create_file">[% loc( 'Create' ) %]</button>
 </form>
