@@ -4,5 +4,5 @@
    <input  name="old_path" type="hidden" value="[% page.old_path %]">
    <input  class="pathname" name="pathname" type="textfield">
    <button class="btn btn-submit" name="_method" type="submit"
-           value="rename">[% loc( 'Rename' ) %]</button>
+           value="rename_file">[% loc( 'Rename' ) %]</button>
 </form>
