@@ -1,0 +1,7 @@
+<form action="[% links.base_uri %]search"
+     enctype="application/x-www-form-urlencoded"
+      method="get" name="search-file">
+   <input  class="pathname" name="query" type="textfield">
+   <button class="btn btn-submit" name="_method" type="submit"
+           value="search_file">[% loc( 'Search' ) %]</button>
+</form>
